--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,10 +3,7 @@
     padding: 0;
 }
 
-
-.body {
-    background-color: #f8f9fa;
-}
+/*index*/
 
 #perfil {
     background-color: #006cbd;
@@ -19,11 +16,6 @@
     font-size: 2.5rem;
 }
 
-.containerUsuario {
-    display: flex;
-    justify-content: center;
-}
-
 .section-title {
     margin-top: 40px;
     margin-bottom: 20px;
@@ -34,10 +26,10 @@
     color: #006cbd;
 }
 
-.footer {
-    background-color: #343a40;
-    color: white;
-    padding: 20px 0;
-    text-align: center;
-    margin-top: 40px;
+
+/*Portafolio*/
+
+.card-img-top {
+    height: 200px;
+    object-fit: cover;
 }
